# nabla

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: ARCHITECTURE.md  BUILTINS.md  GETTING_STARTED.md  LANGUAGE.md
examples/: 00_hello.nbl  01_basics.nbl  02_variables.nbl  03_control_flow.nbl  04_functions.nbl  05_arrays.nbl  06_operators.nbl  07_matrices.nbl  08_builtins.nbl  09_stats.nbl  10_linalg.nbl  11_calculus.nbl  12_structs.nbl  13_gradient_descent.nbl  14_extern.nbl  15_custom_binary.nbl  16_advanced_types.nbl  17_int_and_bool.nbl  18_input_and_mutation.nbl  19_polynomial_fitting.nbl  20_linear_regression.nbl  21_matrix_operations.nbl  22_data_analysis.nbl  23_newton_raphson.nbl
include/: ast.h  builtin.h  codegen.h  constants.h  context.h  diag.h  export.h  jit.h  lexer.h  parser.h  token.h  type.h
src/: ast.cpp  builtin.cpp  codegen.cpp  context.cpp  diag.cpp  lexer.cpp  main.cpp  parser.cpp  runtime.cpp  token.cpp  type.cpp
